# quant-systems-lab

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  reproduce-market-making.yml
config/: bitcoin_trend.json  defensive_momentum.json  defensive_momentum_paper.json  leveraged_trend.json  leveraged_trend_paper.json  leveraged_trend_stress.json  lobster_sample_experiment.json  market_making_flagship.example.json  market_making_flagship.schema.json  strategy_ensemble.json  valuation_regime.json
config/benchmarks/: market_making_seed12.json
data/paper/: defensive_momentum_inputs_2026-07-13.csv  defensive_momentum_inputs_2026-07-13.metadata.json  execution_timing_ohlc_2026-07-13.csv  execution_timing_ohlc_2026-07-13.metadata.json  leveraged_trend_inputs_2026-07-13.csv  leveraged_trend_inputs_2026-07-13.metadata.json
data/real/: coinbase_btc_dff.csv  coinbase_btc_dff.metadata.json  defensive_momentum_ohlc.csv  defensive_momentum_ohlc.metadata.json  leveraged_etf_adjusted.csv  leveraged_etf_adjusted.metadata.json  qqq_fred_stress_daily.csv  qqq_fred_stress_daily.metadata.json  shiller_sp500_monthly.csv
docs/: ASSUMPTIONS_AND_LIMITATIONS.md  CASE_STUDY_MARKET_MAKING.md  DATA_SOURCES.md  DEFENSIVE_MOMENTUM_PAPER_PROTOCOL.md  FIVE_MINUTE_DEMO.md  FLAGSHIP_ARCHITECTURE.md  FLAGSHIP_MARKET_MAKING_RESEARCH_PLAN.md  HIRING_READINESS_AUDIT.md  INTERVIEW_PREP.md  MODEL_CARDS.md  PAPER_TRADING_PROTOCOL.md  PROFILE_CHECKLIST.md  PROJECT_BRIEF.md  REAL_DATA_WORKFLOW.md  RESEARCH_MEMO_BITCOIN_TREND.md  RESEARCH_MEMO_DEFENSIVE_MOMENTUM.md  RESEARCH_MEMO_LEVERAGED_TREND.md  RESEARCH_MEMO_LEVERAGED_TREND_LONG_HISTORY.md  RESEARCH_MEMO_STRATEGY_ENSEMBLE.md  RESEARCH_MEMO_VALUATION_REGIME.md  ROADMAP_COMPLETION_AUDIT.md  index.md
examples/: demo_report_seed7.md  fetch_bitcoin_trend_data.py  fetch_defensive_momentum_data.py  fetch_leveraged_etf_data.py  fetch_leveraged_etf_ohlc.py  fetch_lobster_sample.py  fetch_qqq_fred_stress_data.py  fetch_shiller_sp500_data.py  generate_resume_artifacts.py  market_making_dashboard.py  price_panel_template.csv  record_defensive_momentum_paper.py  record_leveraged_trend_paper.py  run_bitcoin_trend_study.py  run_defensive_momentum_robustness.py  run_defensive_momentum_study.py  run_execution_timing_audit.py  run_leveraged_trend_stress.py  run_leveraged_trend_study.py  run_market_making_flagship.py  run_price_panel_example.py  run_strategy_ensemble.py  run_valuation_regime_study.py  score_defensive_momentum_paper.py  score_leveraged_trend_paper.py
notebooks/: start_here_market_making.ipynb
paper/: defensive_momentum_decisions.jsonl  leveraged_trend_decisions.jsonl
reports/: bitcoin_trend_study.md  defensive_momentum_robustness.md  defensive_momentum_study.md  leveraged_trend_execution_timing.md  leveraged_trend_long_history.md  leveraged_trend_study.md  strategy_ensemble.md  valuation_regime_study.md
reports/market_making_sample/: data_quality.json  data_quality.md  sensitivity.csv  strategy_comparison.csv  study.md  summary.json  validation_selection.csv
scripts/: generate_market_making_demo_video.py  generate_market_making_paper.py
src/quantlab/: __init__.py  cli.py
src/quantlab/credit/: __init__.py  counterparty.py  cox.py  curve.py  default_models.py  intensity.py  (+9 more)
tests/: test_advanced_analytics.py  test_agent_execution_constraints_systemic.py  test_bitcoin_trend.py  test_cdar_pnl_attribution.py  test_covariance_mc_migration_dynamic.py  test_credit_cir_intensity.py  test_credit_counterparty_cva.py  test_credit_cox_hazard.py  test_cross_sectional_intensity_policy_gradient.py  test_data_cli_demo.py  test_data_loaders_validation.py  test_deep_q_learning.py  test_defensive_momentum.py  test_defensive_momentum_paper.py  test_defensive_momentum_robustness.py  test_density_style_walkforward_capital.py  test_dynamic_credit_bayesian_sabr.py  test_ellipsoidal_robust_portfolio.py  test_execution_timing_audit.py  test_factor_model_validation.py  test_hedging_fill_riskbudget_creditportfolio.py  test_johansen_basket_backtest.py  test_leveraged_trend_research.py  test_leveraged_trend_stress.py  test_macro_factor_model.py  test_market_data_reconstruction_replay.py  test_market_making.py  test_market_making_benchmark_regression.py  test_market_making_hawkes.py  test_market_making_published_artifacts.py  test_market_making_research_contracts.py  test_next_layer_models.py  test_option_inventory_cvar_kmv.py  test_options.py  test_options_workflows.py  test_order_book_market_maker.py  test_paper_trading_ledger.py  test_path_credit_systemic_scenarios.py  test_portfolio_credit_systemic.py  test_portfolio_rl_env.py  (+16 more)
(+123 files in other folders)
