[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-systems-lab"
version = "0.1.0"
description = "Research-grade scaffolding for advanced quant finance systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fink692" }]
keywords = ["quantitative-finance", "options", "risk-modeling", "portfolio-optimization", "market-making"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
]

[project.scripts]
quantlab = "quantlab.cli:main"

[project.urls]
Repository = "https://github.com/Fink692/quant-systems-lab"
Issues = "https://github.com/Fink692/quant-systems-lab/issues"

[project.optional-dependencies]
research = [
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "notebook>=7.2",
    "pyarrow>=15.0",
    "reportlab>=4.2",
    "tabulate>=0.9",
]
dashboard = [
    "plotly>=5.22",
    "streamlit>=1.36",
]
video = [
    "imageio-ffmpeg>=0.5",
    "pillow>=12.2.0",
]
dev = [
    "black>=24.0",
    "mkdocs>=1.6",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "tabulate>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = ["tests/"]
files = [
    "src/quantlab/market_data",
    "src/quantlab/market_making/replay.py",
    "src/quantlab/market_making/strategies.py",
    "src/quantlab/research/experiment_config.py",
    "src/quantlab/research/bitcoin_trend.py",
    "src/quantlab/research/defensive_momentum.py",
    "src/quantlab/research/market_making_study.py",
    "src/quantlab/research/registry.py",
    "src/quantlab/research/strategy_ensemble.py",
]
